--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,8 +3,8 @@
 <style>
   .center {
     display: flex;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .redondo {
     border-radius: 25px;
